--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,4 @@
-<my-app>loading</my-app>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+<div class="mat-app-background basic-container">
+	<my-app>loading</my-app>
+</div>
